--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <!-- Required meta tags -->
@@ -10,12 +10,59 @@
     <!-- Load stylesheets -->
     <!-- Bootstrap 4.0 -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Lora:700|Nunito+Sans|Work+Sans" rel="stylesheet">
+    <!-- Custom -->
+    <link rel="stylesheet" type="text/css" href="stylesheets/custom.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.0.11/css/fork-awesome.min.css" integrity="sha256-MGU/JUq/40CFrfxjXb5pZjpoZmxiP2KuICN5ElLFNd8=" crossorigin="anonymous">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   </head>
 
   <body>
-    <h1>
-      Kunal Malkan
-    </h1>
+    <div class="intro">
+      <div class="container">
+        <h1 class="name display-1">
+          Kunal Malkan
+        </h1>
+        <h4 class="headline">
+          I am currently a Software Development Engineer at Amazon on the Relationships Automation team based in NYC. I graduated from <span class="nyu">New York University</span> with a Bachelors in Computer Science and a minor in Mathematics. I like to build things.
+        </h4>
+      </div>
+    </div>
+    <hr class="divider">
+    <div class="canvas">
+      <div class="container">
+        <div class="d-flex flex-row">
+          <div class="p-2">
+            <a class="profile linkedin" href="https://www.linkedin.com/in/kunalmalkan/" target="blank">
+              <i class="fab fa-linkedin"></i>
+            </a>
+          </div>
+          <div class="p-2">
+            <a class="profile github" href="https://github.com/kmalkan/" target="blank">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+          <div class="p-2">
+            <a class="profile spotify" href="https://open.spotify.com/user/1238792733?si=9K42bMsKSOOloaQlwgMNhg" target="blank">
+              <i class="fab fa-spotify"></i>
+            </a>
+          </div>
+          <div class="p-2">
+            <a class="profile xbox" href="" target="blank">
+              <i class="fab fa-xbox"></i>
+            </a>
+          </div>
+          <div class="p-2">
+            <a class="profile keybase" href="" target="blank">
+              <i class="fas fa-key"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Load javascript files -->
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -23,5 +70,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <!-- Bootstrap.js -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- Custom.js -->
+    <script src="js/custom.js" type="text/javascript"></script>
   </body>
 </html>
