Added new links to profile buttons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <!-- Custom -->
     <link rel="stylesheet" type="text/css" href="stylesheets/custom.css">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.0.11/css/fork-awesome.min.css" integrity="sha256-MGU/JUq/40CFrfxjXb5pZjpoZmxiP2KuICN5ElLFNd8=" crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   </head>
 
@@ -50,13 +49,18 @@
             </a>
           </div>
           <div class="p-2">
-            <a class="profile xbox" href="" target="blank">
+            <a class="profile keybase" href="https://keybase.io/malkan" target="blank">
+              <i class="fas fa-key"></i>
+            </a>
+          </div>
+          <div class="p-2">
+            <a class="profile xbox" href="https://www.xboxgamertag.com/search/malkanx/" target="blank">
               <i class="fab fa-xbox"></i>
             </a>
           </div>
           <div class="p-2">
-            <a class="profile keybase" href="" target="blank">
-              <i class="fas fa-key"></i>
+            <a class="profile email" href="mailto:kunal@malkan.io?Subject=Hello" target="_top">
+              <i class="fas fa-envelope"></i>
             </a>
           </div>
         </div>
