--- a/index.html
+++ b/index.html
@@ -11,60 +11,104 @@
     <!-- Bootstrap 4.0 -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Lora:700|Nunito+Sans|Work+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Work+Sans|Raleway:300" rel="stylesheet">
     <!-- Custom -->
     <link rel="stylesheet" type="text/css" href="stylesheets/custom.css">
     <!-- Font Awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   </head>
 
-  <body>
-    <div class="intro">
-      <div class="container">
-        <h1 class="name display-1">
-          Kunal Malkan
-        </h1>
-        <h4 class="headline">
-          I am currently a Software Development Engineer at Amazon on the Relationships Automation team based in NYC. I graduated from <span class="nyu">New York University</span> with a Bachelors in Computer Science and a minor in Mathematics. I like to build things.
-        </h4>
-      </div>
-    </div>
-    <hr class="divider">
-    <div class="canvas">
-      <div class="container">
-        <div class="d-flex flex-row">
-          <div class="p-2">
-            <a class="profile linkedin" href="https://www.linkedin.com/in/kunalmalkan/" target="blank">
-              <i class="fab fa-linkedin"></i>
-            </a>
-          </div>
-          <div class="p-2">
-            <a class="profile github" href="https://github.com/kmalkan/" target="blank">
-              <i class="fab fa-github"></i>
-            </a>
-          </div>
-          <div class="p-2">
-            <a class="profile spotify" href="https://open.spotify.com/user/1238792733?si=9K42bMsKSOOloaQlwgMNhg" target="blank">
-              <i class="fab fa-spotify"></i>
-            </a>
-          </div>
-          <div class="p-2">
-            <a class="profile keybase" href="https://keybase.io/malkan" target="blank">
-              <i class="fas fa-key"></i>
-            </a>
-          </div>
-          <div class="p-2">
-            <a class="profile xbox" href="https://www.xboxgamertag.com/search/malkanx/" target="blank">
-              <i class="fab fa-xbox"></i>
-            </a>
-          </div>
-          <div class="p-2">
-            <a class="profile email" href="mailto:kunal@malkan.io?Subject=Hello" target="_top">
-              <i class="fas fa-envelope"></i>
-            </a>
+  <body class="text-center">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <header class="masthead mb-auto">
+        <div class="inner">
+          <h3 class="masthead-brand">Kunal Malkan</h3>
+          <nav class="nav nav-masthead justify-content-center">
+          </nav>
+        </div>
+      </header>
+
+      <main role="main" class="inner cover">
+        <!-- Links -->
+        <div class="links container">
+          <div class="row justify-content-sm-center">
+            <div class="col-4 col-md-2">
+                <i class="fab fa-linkedin"></i>
+            </div>
+            <div class="col-4 col-md-2">
+                <i class="fas fa-envelope"></i>
+            </div>
+            <div class="col-4 col-md-2">
+                <i class="fab fa-github"></i>
+            </div>
+            <div class="col-4 col-md-2">
+                <i class="fab fa-spotify"></i>
+            </div>
+            <div class="col-4 col-md-2">
+                <i class="fab fa-playstation"></i>
+            </div>
+            <div class="col-4 col-md-2">
+                <i class="fab fa-xbox"></i>
+            </div>
           </div>
         </div>
-      </div>
+        <!-- Intro -->
+        <div class="window">
+          <div class="window-bar">&nbsp;</div>
+          <div class="editor">
+            <p>I am a Software Development Engineer II at Amazon on the Relationships Automation team based in NYC. I graduated from New York University with a Bachelors in Computer Science and a minor in Mathematics.</p>
+            <p>I like to <span class="lead" style="white-space:pre;"></span></p>
+          </div>
+        </div>
+        <!-- Resume -->
+        <div id="resume"><div class="inner">
+          <h6 class="tagline">Resume</h6>
+          <!-- Resume : Education -->
+          <p class="section-tagline">Education</p>
+          <hr>
+          <!-- Resume : Education : NYU -->
+          <p>
+            <a target="_blank" href="http://nyu.edu"><img class="icon" src="img/companies/nyu.jpg">
+            </a><b>New York University</b>
+            <span class="right"><i>2011 - 2015</i></span>
+            <br>
+            <span>Computer Science, B.A.</span>
+            <span class="right"><i>New York, NY</i></span>
+            <br>
+            <b class="minor">Minor in Mathematics</b>
+            <br>
+            <span class="badge badge-secondary skill">Python</span><span class="badge badge-secondary skill">Java</span><span class="badge badge-secondary skill">C</span><span class="badge badge-secondary skill">CUDA</span>
+          </p>
+          <!-- Resume : Education -->
+          <p class="section-tagline">Experience</p>
+          <hr>
+          <p>
+            <a target="_blank" href="http://amazon.com"><img class="icon" src="img/companies/amazon.png">
+            </a><b>Amazon</b>
+            <span class="right"><i>2015 - Present</i></span>
+            <br>
+            <span>Software Development Engineer II</span>
+            <span class="right"><i>New York, NY</i></span>
+            <br>
+            <span class="badge badge-secondary skill">Java</span><span class="badge badge-secondary skill">Scala</span><span class="badge badge-secondary skill">Ruby</span><span class="badge badge-secondary skill">Python</span><span class="badge badge-secondary skill">JavaScript</span><span class="badge badge-secondary skill">HTML</span><span class="badge badge-secondary skill">CSS</span>
+          </p>
+          <p>
+            <a target="_blank" href="http://uplifthumanityindia.org"><img class="icon" src="img/companies/uplift.png">
+            </a><b>Uplift Humanity</b>
+            <span class="right"><i>2016 - Present</i></span>
+            <br>
+            <span>Director of Technology</span>
+            <span class="right"><i>New York, NY</i></span>
+            <br>
+            <span class="badge badge-secondary skill">JavaScript</span><span class="badge badge-secondary skill">HTML</span><span class="badge badge-secondary skill">CSS</span><span class="badge badge-secondary skill">Wordpress</span>
+          </p>
+        </div>
+      </main>
+
+      <footer class="mastfoot mt-auto">
+        <div class="inner">
+        </div>
+      </footer>
     </div>
 
     <!-- Load javascript files -->
@@ -74,6 +118,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <!-- Bootstrap.js -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- Typed.js -->
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
     <!-- Custom.js -->
     <script src="js/custom.js" type="text/javascript"></script>
   </body>
