Added style to the editor window
Made stylistic changes to the editor window

--- a/index.html
+++ b/index.html
@@ -33,31 +33,56 @@
         <div class="links container">
           <div class="row justify-content-sm-center">
             <div class="col-4 col-md-2">
+              <a target="blank" href="https://www.linkedin.com/in/kunalmalkan/" class="linkedin">
                 <i class="fab fa-linkedin"></i>
+              </a>
             </div>
             <div class="col-4 col-md-2">
+              <a target="blank" href="mailto:kunal@malkan.io?Subject=Hello" class="email">
                 <i class="fas fa-envelope"></i>
+              </a>
             </div>
             <div class="col-4 col-md-2">
+              <a target="blank" href="https://github.com/kmalkan/" class="github">
                 <i class="fab fa-github"></i>
+              </a>
             </div>
             <div class="col-4 col-md-2">
+              <a target="blank" href="https://open.spotify.com/user/1238792733?si=9K42bMsKSOOloaQlwgMNhg" class="spotify">
                 <i class="fab fa-spotify"></i>
+              </a>
             </div>
             <div class="col-4 col-md-2">
+              <a target="blank" href="https://psnprofiles.com/malkanx" class="playstation">
                 <i class="fab fa-playstation"></i>
+              </a>
             </div>
             <div class="col-4 col-md-2">
+              <a target="blank" href="https://www.xboxgamertag.com/search/malkanx/" class="xbox">
                 <i class="fab fa-xbox"></i>
+              </a>
             </div>
           </div>
         </div>
         <!-- Intro -->
         <div class="window">
           <div class="window-bar">&nbsp;</div>
+          <div class="container">
+            <div class="row editor-tab-row">
+              <div class="col-6 col-md-3">
+                <div class="editor-tab">
+                  <p>
+                    <span>hello_world.txt</span>
+                    <span class="right editor-tab-x"><i class="fas fa-times"></i></span>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="editor">
-            <p>I am a Software Development Engineer II at Amazon on the Relationships Automation team based in NYC. I graduated from New York University with a Bachelors in Computer Science and a minor in Mathematics.</p>
-            <p>I like to <span class="lead" style="white-space:pre;"></span></p>
+            <p class="editor-p">I am a Software Development Engineer at Amazon on the Relationships Automation team based in NYC. I graduated from New York University with a Bachelors in Computer Science and a minor in Mathematics.</p>
+            <p class="editor-p">&nbsp;</p>
+            <p class="editor-p">I like to <span class="lead" style="white-space:pre;"></span></p>
           </div>
         </div>
         <!-- Resume -->
@@ -79,9 +104,10 @@
             <br>
             <span class="badge badge-secondary skill">Python</span><span class="badge badge-secondary skill">Java</span><span class="badge badge-secondary skill">C</span><span class="badge badge-secondary skill">CUDA</span>
           </p>
-          <!-- Resume : Education -->
+          <!-- Resume : Experience -->
           <p class="section-tagline">Experience</p>
           <hr>
+          <!-- Resume : Experience : Amazon -->
           <p>
             <a target="_blank" href="http://amazon.com"><img class="icon" src="img/companies/amazon.png">
             </a><b>Amazon</b>
@@ -92,6 +118,7 @@
             <br>
             <span class="badge badge-secondary skill">Java</span><span class="badge badge-secondary skill">Scala</span><span class="badge badge-secondary skill">Ruby</span><span class="badge badge-secondary skill">Python</span><span class="badge badge-secondary skill">JavaScript</span><span class="badge badge-secondary skill">HTML</span><span class="badge badge-secondary skill">CSS</span>
           </p>
+          <!-- Resume : Experience : Uplift Humanity -->
           <p>
             <a target="_blank" href="http://uplifthumanityindia.org"><img class="icon" src="img/companies/uplift.png">
             </a><b>Uplift Humanity</b>
@@ -114,12 +141,12 @@
     <!-- Load javascript files -->
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <!-- Popper.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <!-- Bootstrap.js -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- Typed.js -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
+    <!-- Bowser.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bowser/1.9.3/bowser.min.js"></script>
     <!-- Custom.js -->
     <script src="js/custom.js" type="text/javascript"></script>
   </body>
