Added Google Analytics tracking and Pixacore experience

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/custom.css">
     <!-- Font Awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135444210-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-135444210-1');
+    </script>
   </head>
 
   <body class="text-center">
@@ -129,6 +138,17 @@
             <br>
             <span class="badge badge-secondary skill">JavaScript</span><span class="badge badge-secondary skill">HTML</span><span class="badge badge-secondary skill">CSS</span><span class="badge badge-secondary skill">Wordpress</span>
           </p>
+          <!-- Resume : Experience : Pixacore -->
+          <p>
+              <a target="_blank" href="http://pixacore.com"><img class="icon" src="img/companies/pixacore.jpg">
+              </a><b>Pixacore</b>
+              <span class="right"><i>January 2015 - May 2015</i></span>
+              <br>
+              <span>Software Engineer Intern</span>
+              <span class="right"><i>New York, NY</i></span>
+              <br>
+              <span class="badge badge-secondary skill">iOS</span><span class="badge badge-secondary skill">Android</span><span class="badge badge-secondary skill">Swift</span><span class="badge badge-secondary skill">Java</span><span class="badge badge-secondary skill">JavaScript</span><span class="badge badge-secondary skill">HTML</span><span class="badge badge-secondary skill">CSS</span>
+            </p>
         </div>
       </main>
 
