Fixed line number bug

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Kunal Malkan</title>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
     <!-- Load stylesheets -->
     <!-- Bootstrap 4.0 -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Work+Sans|Raleway:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
     <!-- Custom -->
     <link rel="stylesheet" type="text/css" href="stylesheets/custom.css">
     <!-- Font Awesome -->
@@ -22,7 +25,6 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'UA-135444210-1');
     </script>
   </head>
@@ -91,12 +93,12 @@
           <div class="editor">
             <p class="editor-p">I am a Software Development Engineer at Amazon on the Relationships Automation team based in NYC. I graduated from New York University with a Bachelors in Computer Science and a minor in Mathematics.</p>
             <p class="editor-p">&nbsp;</p>
-            <p class="editor-p">I like to <span class="lead" style="white-space:pre;"></span></p>
+            <p class="editor-p"><span class="lead" style="white-space:pre;"></span></p>
           </div>
         </div>
         <!-- Resume -->
         <div id="resume"><div class="inner">
-          <h6 class="tagline">Resume</h6>
+          <h6 class="tagline">Experience</h6>
           <!-- Resume : Education -->
           <p class="section-tagline">Education</p>
           <hr>
@@ -104,7 +106,7 @@
           <p>
             <a target="_blank" href="http://nyu.edu"><img class="icon" src="img/companies/nyu.jpg">
             </a><b>New York University</b>
-            <span class="right"><i>2011 - 2015</i></span>
+            <span class="right"><i>Sep 2011 - May 2015</i></span>
             <br>
             <span>Computer Science, B.A.</span>
             <span class="right"><i>New York, NY</i></span>
@@ -113,42 +115,56 @@
             <br>
             <span class="badge badge-secondary skill">Python</span><span class="badge badge-secondary skill">Java</span><span class="badge badge-secondary skill">C</span><span class="badge badge-secondary skill">CUDA</span>
           </p>
-          <!-- Resume : Experience -->
-          <p class="section-tagline">Experience</p>
+          <!-- Resume : Work -->
+          <p class="section-tagline">Work</p>
           <hr>
-          <!-- Resume : Experience : Amazon -->
+          <!-- Resume : Work : Amazon -->
           <p>
             <a target="_blank" href="http://amazon.com"><img class="icon" src="img/companies/amazon.png">
             </a><b>Amazon</b>
-            <span class="right"><i>2015 - Present</i></span>
+            <span class="right"><i>Jul 2015 - Present</i></span>
             <br>
             <span>Software Development Engineer II</span>
             <span class="right"><i>New York, NY</i></span>
             <br>
             <span class="badge badge-secondary skill">Java</span><span class="badge badge-secondary skill">Scala</span><span class="badge badge-secondary skill">Ruby</span><span class="badge badge-secondary skill">Python</span><span class="badge badge-secondary skill">JavaScript</span><span class="badge badge-secondary skill">HTML</span><span class="badge badge-secondary skill">CSS</span>
           </p>
-          <!-- Resume : Experience : Uplift Humanity -->
+          <!-- Resume : Experience : Pixacore -->
+          <p>
+            <a target="_blank" href="http://pixacore.com"><img class="icon" src="img/companies/pixacore.jpg">
+            </a><b>Pixacore</b>
+            <span class="right"><i>Jan 2015 - May 2015</i></span>
+            <br>
+            <span>Software Engineer Intern</span>
+            <span class="right"><i>New York, NY</i></span>
+            <br>
+            <span class="badge badge-secondary skill">iOS</span><span class="badge badge-secondary skill">Android</span><span class="badge badge-secondary skill">Swift</span><span class="badge badge-secondary skill">Java</span><span class="badge badge-secondary skill">JavaScript</span><span class="badge badge-secondary skill">HTML</span><span class="badge badge-secondary skill">CSS</span>
+          </p>
+          <!-- Resume : Experience : Amazon Internship -->
+          <p>
+            <a target="_blank" href="http://amazon.com"><img class="icon" src="img/companies/amazon.png">
+            </a><b>Amazon</b>
+            <span class="right"><i>Jun 2014 - Aug 2014</i></span>
+            <br>
+            <span>Software Development Engineer Intern</span>
+            <span class="right"><i>Seattle, WA</i></span>
+            <br>
+            <span class="badge badge-secondary skill">Java</span><span class="badge badge-secondary skill">Ruby</span><span class="badge badge-secondary skill">JavaScript</span><span class="badge badge-secondary skill">HTML</span><span class="badge badge-secondary skill">CSS</span>
+          </p>
+          <!-- Resume : Volunteer -->
+          <p class="section-tagline">Volunteer</p>
+          <hr>
+          <!-- Resume : Volunteer : Uplift Humanity -->
           <p>
             <a target="_blank" href="http://uplifthumanityindia.org"><img class="icon" src="img/companies/uplift.png">
             </a><b>Uplift Humanity</b>
-            <span class="right"><i>2016 - Present</i></span>
+            <span class="right"><i>Jul 2016 - Present</i></span>
             <br>
             <span>Director of Technology</span>
             <span class="right"><i>New York, NY</i></span>
             <br>
             <span class="badge badge-secondary skill">JavaScript</span><span class="badge badge-secondary skill">HTML</span><span class="badge badge-secondary skill">CSS</span><span class="badge badge-secondary skill">Wordpress</span>
           </p>
-          <!-- Resume : Experience : Pixacore -->
-          <p>
-              <a target="_blank" href="http://pixacore.com"><img class="icon" src="img/companies/pixacore.jpg">
-              </a><b>Pixacore</b>
-              <span class="right"><i>January 2015 - May 2015</i></span>
-              <br>
-              <span>Software Engineer Intern</span>
-              <span class="right"><i>New York, NY</i></span>
-              <br>
-              <span class="badge badge-secondary skill">iOS</span><span class="badge badge-secondary skill">Android</span><span class="badge badge-secondary skill">Swift</span><span class="badge badge-secondary skill">Java</span><span class="badge badge-secondary skill">JavaScript</span><span class="badge badge-secondary skill">HTML</span><span class="badge badge-secondary skill">CSS</span>
-            </p>
         </div>
       </main>
 
@@ -165,8 +181,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- Typed.js -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
-    <!-- Bowser.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bowser/1.9.3/bowser.min.js"></script>
     <!-- Custom.js -->
     <script src="js/custom.js" type="text/javascript"></script>
   </body>
