Compressed images for faster loading

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <hr>
           <!-- Resume : Education : NYU -->
           <p>
-            <a target="_blank" href="http://nyu.edu"><img class="icon" src="img/companies/nyu.jpg">
+            <a target="_blank" href="http://nyu.edu"><img class="icon" src="img/companies/nyu.png">
             </a><b>New York University</b>
             <span class="right"><i>Sep 2011 - May 2015</i></span>
             <br>
@@ -131,7 +131,7 @@
           </p>
           <!-- Resume : Experience : Pixacore -->
           <p>
-            <a target="_blank" href="http://pixacore.com"><img class="icon" src="img/companies/pixacore.jpg">
+            <a target="_blank" href="http://pixacore.com"><img class="icon" src="img/companies/pixacore.png">
             </a><b>Pixacore</b>
             <span class="right"><i>Jan 2015 - May 2015</i></span>
             <br>
