--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
 
       <footer class="mastfoot mt-auto">
         <div class="inner">
+          Copyright © 2019 Kunal Malkan. All rights reserved.
         </div>
       </footer>
     </div>
