Changed fonts and font sizes for various components

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Bootstrap 4.0 -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Source+Sans+Pro:100" rel="stylesheet">
     <!-- Custom -->
     <link rel="stylesheet" type="text/css" href="stylesheets/custom.css">
     <!-- Font Awesome -->
@@ -33,7 +33,7 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
         <div class="inner">
-          <h3 class="masthead-brand">Kunal Malkan</h3>
+          <h1 class="masthead-brand">Kunal Malkan</h1>
           <nav class="nav nav-masthead justify-content-center">
           </nav>
         </div>
@@ -91,7 +91,12 @@
             </div>
           </div>
           <div class="editor">
-            <p class="editor-p">I am a Software Development Engineer at Amazon on the Relationships Automation team based in NYC. I graduated from New York University with a Bachelors in Computer Science and a minor in Mathematics.</p>
+            <p class="editor-p">
+              <span>
+                Hello! I am a Software Engineer who is passionate about new technology and has an aptitude for abstract reasoning and creativity. 
+                I currently work at Amazon on the Relationships Automation team based in NYC. 
+                I graduated from New York University with a Bachelors in Computer Science and a minor in Mathematics.</p>
+              </span>
             <p class="editor-p">&nbsp;</p>
             <p class="editor-p"><span class="lead" style="white-space:pre;"></span></p>
           </div>
