Rewrote the intro statement

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="editor">
             <p class="editor-p">
               <span>
-                Hello! I am a Software Engineer who is passionate about new technology and has an aptitude for abstract reasoning and creativity. 
+                Hi, I'm Kunal! I'm a software engineer who is passionate about new technology and has an aptitude for abstract reasoning and creativity. 
                 I currently work at Amazon on the Relationships Automation team based in NYC. 
                 I graduated from New York University with a Bachelors in Computer Science and a minor in Mathematics.</p>
               </span>
