Changed PSN profile website

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               </a>
             </div>
             <div class="col-4 col-md-2">
-              <a target="blank" href="https://psnprofiles.com/malkanx" class="playstation">
+              <a target="blank" href="https://psntrophyleaders.com/user/view/malkanx" class="playstation">
                 <i class="fab fa-playstation"></i>
               </a>
             </div>
